--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           uv sync --locked --only-dev
       - uses: mschoettle/pre-commit-action@v4.2.1
         env:
-          SKIP: markdownlint-cli2
+          SKIP: markdownlint-cli2,reuse-lint-file
 
   run-reuse-workflow:
     uses: opalmedapps/.github/.github/workflows/reuse.yaml@main
