--- a/_typos.toml
+++ b/_typos.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
+#
+# SPDX-License-Identifier: MIT
+
 [default.extend-words]
 muhc = "muhc"
 # part of SerNum
