chore: add requires-python preset for pinned Python version

--- a/renovate.json5
+++ b/renovate.json5
@@ -12,6 +12,7 @@
     // https://docs.renovatebot.com/presets-default/#enableprecommit
     ":enablePreCommit",
     "github>mschoettle/renovate-presets//presets/actions-dependency-version.json5",
+    "github>mschoettle/renovate-presets//presets/requires-python.json5",
   ],
   // https://docs.renovatebot.com/configuration-options/#assignees
   "assignees": ["mschoettle"],
