--- a/renovate.json5
+++ b/renovate.json5
@@ -40,5 +40,10 @@
       "matchPackageNames": ["/markdownlint-cli2/"],
       "groupName": "markdownlint-cli2",
     },
+    // Combine uv package, uv image, and uv-pre-commit
+    {
+      "matchPackagePatterns": "uv-pre-commit|uv$",
+      "groupName": "uv",
+    },
   ],
 }
