--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
+#
+# SPDX-License-Identifier: MIT
+
 name: ci
 
 on:
@@ -34,7 +38,10 @@ jobs:
           uv sync --locked --only-dev
       - uses: mschoettle/pre-commit-action@v4.2.1
         env:
-          SKIP: markdownlint-cli2
+          SKIP: markdownlint-cli2,reuse-lint-file
+
+  run-reuse-workflow:
+    uses: opalmedapps/.github/.github/workflows/reuse.yaml@main
 
   markdownlint:
     permissions:
