enable attr_list for images

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,9 +135,11 @@ markdown_extensions:
   - def_list
   - footnotes
   # enable HTML in Markdown for image captions
+  # https://squidfunk.github.io/mkdocs-material/reference/images/
   # https://squidfunk.github.io/mkdocs-material/reference/images/#image-captions
   # https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown/#markdown-in-html
   - md_in_html
+  - attr_list
   - tables
   - toc:
       permalink: true
