More changers for new document

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - user/index.md
     - Demo:
       - "OpenEMR: Adding a document": user/demo/OpenEMR_add_document/openemr_adding_document.md
+      - "OpenEMR: Adding a diagnosis": user/demo/OpenEMR_add_diagnosis/openemr_add_diagnosis.md                      
   - Contribute:
     - development/index.md
     - Architecture:
