--- a/REUSE.toml
+++ b/REUSE.toml
@@ -31,6 +31,7 @@ SPDX-License-Identifier = "MIT"
 [[annotations]]
 path = [
     "uv.lock",
+    "docs/CNAME",
 ]
 SPDX-FileCopyrightText = "NONE"
 SPDX-License-Identifier = "CC0-1.0"
