--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
       - development/architecture/migration.md
       - Registration Process: development/architecture/registration.md
       - development/architecture/checkin_process.md
-    - development/setup.md
+    - Set up a Local Development Environment: development/local-dev-setup.md
     - Best Practices:
       - Overview: development/best_practices/best_practices.md
       - Code Review: development/best_practices/code_review.md
@@ -41,9 +41,9 @@ nav:
           - JavaScript: development/guides/javascript.md
       - Sequence Diagrams: development/guides/sequence_diagrams.md
       - Generate Self Signed Certificates: development/guides/self_signed_certificates.md
-  - Deploy:
-    - Deploying The Opal Solution: deploy/index.md
-    - Hospital Integration: deploy/integration.md
+  - Install:
+    - Deploying the Opal Solution: install/index.md
+    - Hospital Integration: install/integration.md
 
 # Configuration
 theme:
