chore: disable enforcing semantic linebreaks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
 
     uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
     with:
-      semantic-linebreak: true
+      semantic-linebreak: false
 
   build:
     runs-on: ubuntu-latest
