--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,9 +22,9 @@ nav:
   - Home: index.md
   - User Guide:
     - user/index.md
-    - Demo:
-      - "OpenEMR: Adding a document": user/demo/OpenEMR_add_document/openemr_adding_document.md
-      - "OpenEMR: Adding a diagnosis": user/demo/OpenEMR_add_diagnosis/openemr_add_diagnosis.md
+    - OpenEMR:
+      - Adding a document: user/openemr/document/adding_document.md
+      - Adding a diagnosis: user/openemr/diagnosis/add_diagnosis.md
   - Contribute:
     - development/index.md
     - Architecture:
