--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,13 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-json
         # file contains comments
-        exclude: ^\.vscode/settings.json$
+        exclude: |
+          (?x)(
+            ^(
+              \.vscode/settings\.json
+              |\.devcontainer/devcontainer.json
+            )
+          )
       - id: check-merge-conflict
       - id: check-toml
       - id: check-xml
