--- a/REUSE.toml
+++ b/REUSE.toml
@@ -20,6 +20,7 @@ SPDX-License-Identifier = "CC-BY-SA-4.0"
 
 [[annotations]]
 path = [
+    ".devcontainer/devcontainer.json",
     ".vscode/extensions.json",
     ".vscode/settings.json",
 ]
