--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
       "version": "0.6.13"
     }
   },
-  "postCreateCommand": "uv sync && git config push.autosetupremote true && uv run pre-commit install-hooks",
+  "postCreateCommand": "uv sync && git config push.autosetupremote true && uv run pre-commit install-hooks && uv run pre-commit install",
   // Tool-specific properties: https://containers.dev/supporting
   "customizations": {
     "vscode": {
