New document and updated index page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
     - OpenEMR:
       - Adding a document: user/openemr/document/add_document.md
       - Adding a diagnosis: user/openemr/diagnosis/add_diagnosis.md
+      - Adding a patient: user/openemr/patient/add_patient.md
   - Contribute:
     - development/index.md
     - Architecture:
