remove RAMQ reference

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,7 @@
     "opalmedapps",
     "openemr",
     "syringobulbia"
-  ]
+  ],
+  "markdown.extension.orderedList.autoRenumber": false,
+  "markdown.extension.orderedList.marker": "one"
 }
