--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
   // https://containers.dev/features
   "features": {
     "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {
-      "version": "0.6.13"
+      "version": "latest"
     }
   },
   "postCreateCommand": "uv sync && git config push.autosetupremote true && uv run pre-commit install-hooks && uv run pre-commit install",
