--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,11 +84,15 @@ repos:
       - id: check-renovate
         args: ["--verbose"]
         additional_dependencies: ['json5']
-      # requires: https://github.com/python-jsonschema/check-jsonschema/issues/341
-      # - id: check-jsonschema
-      #   name: "Validate devcontainer"
-      #   files: ^\.devcontainer/.*\.json$
-      #   args: ["--schemafile", "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json"]
+      - id: check-jsonschema
+        name: "Validate devcontainer"
+        files: ^\.devcontainer/.*\.json$
+        args: [
+          "--schemafile",
+          "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json",
+          "--force-filetype",
+          "json5",
+        ]
       # waiting for custom YAML tags support: https://github.com/python-jsonschema/check-jsonschema/issues/489
       # - id: check-jsonschema
       #   name: "Validate MkDocs file"
