chore: enable mkdocs-material-linter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
     uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
     with:
       semantic-linebreak: false
+      mkdocs-material-linter: true
 
   build:
     runs-on: ubuntu-latest
