chore: improve Renovate config

--- a/renovate.json5
+++ b/renovate.json5
@@ -5,18 +5,19 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
+    // https://docs.renovatebot.com/presets-config/#configrecommended
     "config:recommended",
     // https://docs.renovatebot.com/presets-default/#separatemultiplemajorreleases
     ":separateMultipleMajorReleases",
     // set timezone to local one to ensure schedules are run
     // https://docs.renovatebot.com/configuration-options/#timezone
     ":timezone(America/Toronto)",
-    // enable updates for pre-commit
-    // see: https://docs.renovatebot.com/modules/manager/pre-commit/
-    // https://docs.renovatebot.com/presets-default/#enableprecommit
-    ":enablePreCommit",
+    // https://docs.renovatebot.com/presets-default/#maintainlockfilesweekly
+    ":maintainLockFilesMonthly",
+    // https://docs.renovatebot.com/presets-helpers/#helperspingithubactiondigeststosemver
+    "helpers:pinGitHubActionDigestsToSemver",
     "github>mschoettle/renovate-presets//presets/actions-dependency-version.json5",
-    "github>mschoettle/renovate-presets//presets/packages/typos.json5",
+    "github>mschoettle/renovate-presets//presets/pre-commit-hooks.json5",
   ],
   // https://docs.renovatebot.com/configuration-options/#assignees
   "assignees": ["mschoettle"],
@@ -44,17 +45,15 @@
       "matchPackageNames": ["/markdownlint-cli2/"],
       "groupName": "markdownlint-cli2",
     },
-    // Reduce noise of pre-commit hooks
+    // Exclude uv and ruff pre-commits from pre-commit hooks group
+    // to avoid adding config options from the pre-commit hooks preset
     {
       "matchManagers": [
         "pre-commit",
       ],
-      "groupName": "pre-commit hooks",
-      "separateMajorMinor": false,
-      "separateMinorPatch": false,
-      // Restrict to weekly updates
-      "schedule": [
-        "before 12pm on Monday",
+      "matchPackageNames": [
+        "!/ruff-pre-commit/",
+        "!/uv-pre-commit/",
       ],
     },
     // Combine uv package, uv image, and uv-pre-commit
