Added searching and updating sections to the existing Adding a patient document. Renamed the existing document to Adding and Updating a Patient.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - OpenEMR:
       - Adding a document: user/openemr/document/add_document.md
       - Adding a diagnosis: user/openemr/diagnosis/add_diagnosis.md
-      - Adding a patient: user/openemr/patient/add_patient.md
+      - Adding and updating patients: user/openemr/patient/add_update_patient.md
       - Adding a provider: user/openemr/provider/add_provider.md
       - Scheduling appointments: user/openemr/appointment/schedule_appointment.md
   - Contribute:
