--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,12 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      # Problem matcher for htmlproofer warnings (instead of errors to avoid failing the build randomly)
+      # https://github.com/actions/toolkit/blob/main/docs/problem-matchers.md
+      # https://github.com/actions/toolkit/blob/main/docs/commands.md#problem-matchers
+      - name: Add problem matcher
+        run: |
+          echo "::add-matcher::.github/matcher-htmlproofer.json"
       - name: Build site
         run: uv run mkdocs build --strict
 
