--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,10 @@ jobs:
           echo "::add-matcher::.github/matcher-htmlproofer.json"
       - name: Build site
         run: uv run mkdocs build --strict
+      - name: View context attributes
+        uses: actions/github-script@v8
+        with:
+          script: console.log(context)
 
   deploy:
     uses: ./.github/workflows/deploy.yml
