ci: add problem matcher for htmlproofer invalid url errors and fix build (#418)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,10 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      # https://github.com/actions/toolkit/blob/main/docs/commands.md#problem-matchers
+      - name: Add problem matcher for HTML proofer invalid url errors
+        run: |
+          echo "::add-matcher::.github/matcher-htmlproofer.json"
       - name: Build site
         run: uv run mkdocs build --strict
 
