fix: try switching back to PlantUML server

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -189,8 +189,7 @@ markdown_extensions:
   # https://github.com/mikitex70/plantuml-markdown
   - plantuml_markdown:
       servers:
-        - url: https://kroki.io/plantuml
-          kroki: true
+        - url: https://plantuml.com/plantuml
       # use caching to speed up live-reloading
       cachedir: .cache/.plantuml/
 
