--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,10 @@ jobs:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           persist-credentials: false
-      - uses: astral-sh/setup-uv@803947b9bd8e9f986429fa0c5a41c367cd732b41 # v7.2.1
-        id: setup-uv
+      - uses: j178/prek-action@564dda4cfa5e96aafdc4a5696c4bf7b46baae5ac # v1.1.0
         with:
-          # renovate: datasource=pypi dependency=uv
-          version: "0.9.30"
-      - name: Install pre-commit
-        run: |
-          uv sync --locked --only-dev
-      - uses: mschoettle/pre-commit-action@0ffaba63d7e205c4109d6a3ca4ced5fc4decd04b # v4.2.3
+          # renovate: datasource=pypi dependency=prek
+          prek-version: "0.3.1"
         env:
           SKIP: markdownlint-cli2,reuse-lint-file
 
