--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,17 +38,18 @@ jobs:
   run-reuse-workflow:
     uses: opalmedapps/.github/.github/workflows/reuse.yaml@main
 
-  markdownlint:
-    permissions:
-      contents: read
-      # required for upload-sarif action
-      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-for-sarif-files-generated-outside-of-a-repository
-      security-events: write
-
-    uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
-    with:
-      semantic-linebreak: false
-      mkdocs-material-linter: true
+# TODO temporarily disabled to allow publishing docs while debugging error: "docker: Error response from daemon: client version 1.41 is too old. Minimum supported API version is 1.44, please upgrade your client to a newer version."
+#  markdownlint:
+#    permissions:
+#      contents: read
+#      # required for upload-sarif action
+#      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-for-sarif-files-generated-outside-of-a-repository
+#      security-events: write
+#
+#    uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
+#    with:
+#      semantic-linebreak: false
+#      mkdocs-material-linter: true
 
   build:
     runs-on: ubuntu-latest
@@ -91,7 +92,8 @@ jobs:
     if: success() && github.ref == 'refs/heads/main'
     needs:
       - lint
-      - markdownlint
+      # TODO temporarily disabled
+      #- markdownlint
       - build
     permissions:
       contents: write
